# omnissiah

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
agents/: deep_agent.py  skill_loader.py  skills.py  telegram_orchestrator.py  tool_registry.py
agents/skills/: __init__.py  skills_index.json
agents/skills/car_maintenance/: SKILL.md  skill.md
agents/skills/house_maintenance/: SKILL.md  skill.md
agents/skills/lawncare/: SKILL.md  skill.md
agents/skills/lawncare/references/: fertilizer-schedule.md  seeding-guide.md
agents/skills/lawncare/scripts/: fertilizer_calculator.py  watering_decision.py  weather_check.py
agents/skills/lawncare/templates/: seasonal-checklist.md.template
app/: chainlit.py  main.py
app/routes/: agent.py  budgets.py  cars.py  maintenance.py  tasks.py
app/telegram/: bot.py  handler.py
app/utils/: car_schedule_loader.py
config/: settings.py
data/: car_schedules.json
database/: database.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/api/: client.js
frontend/src/pages/: Admin.js  Budgets.js  Cars.js  Dashboard.js  Maintenance.js  Tasks.js
frontend/src/styles/: Admin.css  Dashboard.css  Pages.css
