[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnissiah"
version = "0.1.0"
description = "Home Assistant Maintenance Management App"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chainlit>=1.0.0",
    "python-telegram-bot>=20.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "langgraph>=0.0.30",
    "langchain>=0.1.0",
    "deepagents>=0.5.0,<0.6.0",
    "anthropic>=0.25.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["app", "agents", "config", "database"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
# Test skill ingestion from skill.md files
test-skills = "agents.skill_loader:main"